--- a/helm-guestbook/templates/helmapp.yml
+++ b/helm-guestbook/templates/helmapp.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: helm
+  name: helmargo
   namespace: argocd
 spec:
   project: default
