--- a/helm-guestbook/templates/helmapp.yml
+++ b/helm-guestbook/templates/helmapp.yml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/SanLatkar/argocd-example-apps
-    targetRevision: HEAD
+    targetRevision: argocd
     path: helm-guestbook
   destination:
     server: https://kubernetes.default.svc
