--- a/helm-guestbook/templates/helmapp.yml
+++ b/helm-guestbook/templates/helmapp.yml
@@ -1,14 +1,14 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: argohelm
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/SanLatkar/argocd-example-apps
-    targetRevision: argocd
-    path: helm-guestbook
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: default
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: argohelm
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     repoURL: https://github.com/SanLatkar/argocd-example-apps
+#     targetRevision: argocd
+#     path: helm-guestbook
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: default
